<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signing_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        tools:context=".ui.signup.SignUpFragment">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintBottom_toTopOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/trans_black"
            app:cardCornerRadius="25dp"
            app:layout_constraintBottom_toTopOf="@+id/login_flow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintWidth_percent="0.8">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/trans_black"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/plix_red"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/name_TextInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.helper.widget.Flow
                    android:id="@+id/name_flow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="name_TextInputLayout,second_name_TextInputLayout"
                    app:flow_horizontalGap="4dp"
                    app:layout_constraintBottom_toTopOf="@id/phone_gender_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_TextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/first_name"
                    android:textColorHint="@color/white"
                    app:hintAnimationEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/second_name_TextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/white"
                    app:hintAnimationEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/second_name_TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.helper.widget.Flow
                    android:id="@+id/phone_gender_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:constraint_referenced_ids="phone_TextInputLayout,textInputLayout"
                    app:flow_horizontalGap="4dp"
                    app:layout_constraintBottom_toTopOf="@id/email_TextInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_flow" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_TextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:hint="@string/phone"
                    android:textColorHint="@color/white"
                    app:hintAnimationEnabled="true"
                    app:layout_constraintWidth_percent="0.60">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/gender"
                    android:orientation="horizontal"
                    android:textColorHint="@color/white"
                    app:endIconTint="@color/plix_red"
                    app:startIconTint="@color/plix_red">

                    <AutoCompleteTextView
                        android:id="@+id/gender_auto_complete_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_TextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/white"
                    app:hintAnimationEnabled="true"
                    app:layout_constraintBottom_toTopOf="@id/password_TextInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phone_gender_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_TextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/white"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="false"
                    app:hintAnimationEnabled="true"
                    app:layout_constraintBottom_toTopOf="@id/sign_up_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email_TextInputLayout"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/plix_red">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:password="true"
                        android:textColor="@color/white"
                        tools:ignore="Deprecated" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/sign_up_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:cornerRadius="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password_TextInputLayout"
                    app:strokeColor="@color/plix_red"
                    app:strokeWidth="2dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/login_flow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            app:constraint_referenced_ids="already_has_account_text_view,goto_login_button"
            app:flow_horizontalGap="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView2" />

        <TextView
            android:id="@+id/already_has_account_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/goto_login_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/plix_red"
            android:textSize="16sp"
            android:textStyle="bold" />


        <include
            android:id="@+id/progress_card_view"
            layout="@layout/loading_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toTopOf="@+id/cardView2"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
